[package]
name = "jsont_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "jsont_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.4"
rustler = { git = "https://github.com/devsnek/rustler.git", rev = "85db85042821396f7d5151a965d1e8233ac7738f" }
serde_json = "1.0.111"
simdutf8 = "0.1.4"

[profile.release]
opt-level = 3
lto = true
