[package]
name = "jsont_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "jsont_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.32.1", features = ["big_integer"] }
serde_json = "1.0.111"
simdutf8 = "0.1.4"

[profile.release]
opt-level = 3
lto = true
